--- a/Web/Client/Public/index.html
+++ b/Web/Client/Public/index.html
@@ -4,7 +4,12 @@
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="underscore.js"></script>
   <script type="text/javascript" src="backbone.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="main-es6.js"></script>
+  <script type="text/javascript">
+    congif = {
+      apiUrl: "http://localhost:5004/api"
+    };
+  </script>
   <body>
     <div id="body">Hello from Index</div>
   </body>
