--- a/Web/Client/Public/index.html
+++ b/Web/Client/Public/index.html
@@ -4,12 +4,10 @@
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="underscore.js"></script>
   <script type="text/javascript" src="backbone.js"></script>
-  <script type="text/javascript" src="main-es6.js"></script>
   <script type="text/javascript">
-    congif = {
-      apiUrl: "http://localhost:5004/api"
-    };
+    config = { apiUrl: "http://localhost:5004/api" };
   </script>
+  <script type="text/javascript" src="main.js"></script>
   <body>
     <div id="body">Hello from Index</div>
   </body>
