--- a/Web/Client/Public/index.html
+++ b/Web/Client/Public/index.html
@@ -7,16 +7,11 @@
     <title>Title</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://fb.me/react-0.13.3.js"></script>
     <script type="text/javascript" src="jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    <!-- EasyUI -->
-    <!--<script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="easyui/themes/bootstrap/easyui.css">
-    <link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
-    <link rel="stylesheet" type="text/css" href="easyui/themes/color.css">-->
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="jstree/dist/themes/default/style.min.css" />
     <script src="jstree/dist/jstree.min.js"></script>
 
