--- a/Web/Client/Public/index2.html
+++ b/Web/Client/Public/index2.html
@@ -45,15 +45,15 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="dist/js/sb-admin-2.js"></script>
+    <script src="bower_components/metisMenu/src/metisMenu.js"></script>
 
     <script type="text/javascript">
       config = { apiUrl: "http://localhost:5004/api" };
     </script>
     <script src="main.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="dist/js/sb-admin-2.js"></script>
 
     <!-- Page-Level Demo Scripts - Notifications - Use for reference -->
     <script>
